--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.exclusions=**/target/**, **/build/**
 sonar.inclusions=pom.xml, **/*.java
 
 # Include resources (if applicable)
-sonar.java.binaries=target/classes
+sonar.java.binaries=./target/classes
 
 # -------- TEST COVERAGE (Optional) --------
 sonar.junit.reportPaths=target/surefire-reports
