Add demo token to sonar-project.properties
Added a token for demo purposes in the sonar-project.properties file.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,5 +20,6 @@ sonar.java.binaries=target/classes
 sonar.junit.reportPaths=target/surefire-reports
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 
+# Token added for demo purpose only
 sonar.host.url=http://3.225.1.206:9000/
-sonar.token=sqa_74c81662babc32fca44d4ede2d2e243f8b881df0
+sonar.token=sqa_74c81662babc32fca44d4ede2d2e243f8b881df0 
