--- a/.github/workflows/PR-Check.yml
+++ b/.github/workflows/PR-Check.yml
@@ -2,10 +2,10 @@ name: SonarQube Analysis
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
     types: [opened, synchronize, reopened]
-  workflow_dispatch:
+  # workflow_dispatch:
 
 jobs:
   sonar-scan:
